--- a/README.adoc
+++ b/README.adoc
@@ -96,10 +96,6 @@ This will produce a problem detail like this:
 
 There are many other nice features. For the full documentation, look at the https://github.com/eclipse/microprofile-sandbox/blob/master/proposals/problem-details/spec/src/main/asciidoc/microprofile-problemdetails.asciidoc[spec] and/or the https://tools.ietf.org/html/rfc7807[RFC-7807] for the exact semantics of those fields.
 
-== Implementation Details
-
-1. We use http://www.slf4j.org[slf4j] for logging. If this is not provided by your application server, you may also have to package the `slf4j-api` and a binding like `slf4j-jdk14`.
-
 == Module Structure
 
 === jaxrs
@@ -120,7 +116,7 @@ This is a library used by the JAX-RS implementation as well as the Spring implem
 
 === demo
 
-Builds a `war` hard-wired to the JAX-RS implementation; and when using the maven profile `with-slf4j`, the `slf4j-api` and `slf4j-jdk14` are included as well. The integration tests use https://github.com/t1/jee-testcontainers[JEE Testcontainers], i.e. it can be configured to start different Docker containers with various JEE application servers (details below). By default, it starts a Wildfly.
+Builds a `war` hard-wired to the JAX-RS implementation. The integration tests use https://github.com/t1/jee-testcontainers[JEE Testcontainers], i.e. it can be configured to start different Docker containers with various JEE application servers (details below). By default, it starts a Wildfly.
 
 You can also specify a base URL in the system property `testcontainer-running` (e.g. `-Dtestcontainer-running=http://localhost:8080/demo`), so the tests verify a running service. This is very handy while developing. This also works when the running service is the Spring Boot Test application (see below).
 
@@ -130,7 +126,7 @@ Default `mvn` or explicitly `mvn -Djee-testcontainer=wildfly`
 
 ==== Open Liberty
 
-`mvn -Djee-testcontainer=open-liberty -Pwith-slf4j`
+`mvn -Djee-testcontainer=open-liberty`
 
 ==== TomEE
 
@@ -142,7 +138,7 @@ This version doesn't write the problem detail response entity in some cases I do
 
 ==== Payara
 
-`mvn -Djee-testcontainer=payara -Pwith-slf4j`
+`mvn -Djee-testcontainer=payara`
 
 === test-spring
 
